--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -47,9 +47,9 @@ const BASE = import.meta.env.BASE_URL ?? '/';
     <span
       class="text-white uppercase font-semibold md:font-bold tracking-[0.08em]
              text-[1rem] md:text-[1.75rem]"
-      style="font-feature-settings:'kern','liga','calt';"
+      style="font-family: 'Poppins'; font-feature-settings:'kern','liga','calt';"
     >
-      ɅLEXIS&nbsp;FISKɅ
+      Alexis&nbsp;Fiska
     </span>
 
 </a>
