--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@
 <!-- Redirige la racine vers la version française par défaut -->
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/fr" />
+    <meta http-equiv="refresh" content="0; url=/en" />
     <meta name="robots" content="noindex" />
   </head>
   <body></body>
